--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,23 +2,56 @@
 
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
 {% if user.is_authenticated %}
-    <h1>Hello World</h1>
+
+    <table class="table table-striped table-hover table-bordered">
+        <thead class="table-light">
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Address</th>
+            <th scope="col">City</th>
+            <th scope="col">State</th>
+            <th scope="col">Zipcode</th>
+            <th scope="col">Created at</th>
+            <th scope="col">ID</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            {% if records %}
+                {% for record in records %}
+                    <tr class="clickable" data-url="{% url 'record' record.id %}" onclick="window.location.href=this.dataset.url">
+                        <td>{{ record.first_name }} {{ record.last_name }}</td>
+                        <td>{{ record.email }}</td>
+                        <td>{{ record.phone }}</td>
+                        <td>{{ record.address }}</td>
+                        <td>{{ record.city }}</td>
+                        <td>{{ record.state }}</td>
+                        <td>{{ record.zipcode }}</td>
+                        <td>{{ record.created_at }}</td>
+                        <td>{{ record.id }}</td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+        </tbody>
+    </table>
+
 {% else %}
-    <h1>Login</h1>
-    <br>
-    <form method="POST" action="{% url 'home' %}">
-        {% csrf_token %}
-        <div class="mb-3">
-            <input type="text" class="form-control" name="username" placeholder="Username" required>
-        </div>
-        <div class="mb-3">
-            <input type="password" class="form-control" name="password" placeholder="Password" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+    <div class="col-md-6 offset-md-3">
+        <h1>Login</h1>
+        <br>
+        <form method="POST" action="{% url 'home' %}">
+            {% csrf_token %}
+            <div class="mb-3">
+                <input type="text" class="form-control" name="username" placeholder="Username" required>
+            </div>
+            <div class="mb-3">
+                <input type="password" class="form-control" name="password" placeholder="Password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+    </div>
 {% endif %}
-</div>
 
 {% endblock %}
