--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="col-md-6 offset-md-3"></div>
+<div class="col-md-6 offset-md-3">
     <h1>Register</h1>
     <br>
     <form method="POST" action="{% url 'register' %}">
