--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -35,5 +35,6 @@
 <br>
 <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
 <a href="{% url 'delete' record.id %}" class="btn btn-danger">Delete</a>
+<a href="{% url 'update' record.id %}" class="btn btn-primary">Update</a>
 
 {% endblock %}
