--- a/website/templates/add_record.html
+++ b/website/templates/add_record.html
@@ -10,6 +10,7 @@
         {{ form.as_p}}
 
         <br>
+        <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
         <button type="submit" class="btn btn-primary">Add</button>
     </form>
 
