--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,7 +4,7 @@
 
 {% if user.is_authenticated %}
 
-    <table class="table table-striped table-hover table-bordered">
+    <table class="table table-hover table-bordered">
         <thead class="table-light">
           <tr>
             <th scope="col">Name</th>
